# portfolio

./: readme.md
QuickerBB_exploit/: exploit.rb  readme.md
Train/: .cproject  .project  CMakeLists.txt  Train  readme.md
Train/engine/: main.cpp
anonymous_voting_on_blockchain/: blockchain_server.py  client.py  election_content.json  elgamal.py  generate_election.py  main.py  miner.py  number.py  readme.md  temp.json  utils.py  verify_and_extend.py  verify_bb.py  verify_election.py  vote_dproof.py
anonymous_voting_on_blockchain/tor_files/hidden_service/: hostname  hs_ed25519_public_key  hs_ed25519_secret_key
gotta map them all/: Readme.md  pom.xml
gotta map them all/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
gotta map them all/doc/be/ac/ulb/infof307/g04/: Main.html  package-frame.html  package-summary.html  package-tree.html  (+1 more)
gotta map them all/doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
machine_learning_1/: main.py  reamde.md
machine_learning_1/already generated answers/: evaluation_max_depth_of_3.txt  evaluation_max_depth_of_5.txt  evaluation_max_leaf_nodes_of_33.txt  evaluation_max_leaf_nodes_of_5.txt
machine_learning_2/: main.py  readme.md
(+233 files in other folders)
